fix(event): Prevent action buttons from wrapping

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -23,6 +23,7 @@
 .action-buttons {
     margin-left: auto;
     text-align: right;
+    white-space: nowrap;
 }
 
 .u-actions {
